@@ -15,6 +15,7 @@
     Devices list and menu Mount and Unmount sensitivity
     added desktop option Arrange Icons|Custom
     single-click or right-click on desktop or unselected unselects
+    automatic desktop drag action
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
